--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ version = "0.0.1"
 description = "Utility classes for functional programming in Python"
 readme = "README.md"
 requires-python = ">=3.10"
-license-files = ["LICENSE.txt"]
 keywords = ["functional programming", "utility", "FP", "option", "either", "effect", "io"]
 authors = [
   { name = "Jason McKinney" }
@@ -23,3 +22,5 @@ classifiers = [
 [project.urls]
 Documentation = "https://jason-mckinney.github.io/fputils/"
 
+[tool.setuptools.packages.find]
+exclude = ["test", "tests", "test.*", "tests.*"]
