--- a/.github/workflows/pytest-coverage.yml
+++ b/.github/workflows/pytest-coverage.yml
@@ -22,7 +22,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov ruff
 
       - name: Run pytest with coverage
         run: pytest --cov=src/fputils --cov-branch --cov-report=term-missing --cov-fail-under=80
+
+      - name: Ruff check
+        run: ruff check
+
+      - name: Ruff check formatting
+        run: ruff format --check
