Add setuptools-git-versioning and rename build and publish docs github actions jobs

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -1,11 +1,11 @@
 name: Build and Publish Docs
+
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
-  build:
+  build-docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,13 +24,12 @@ jobs:
         with:
           path: docs/fputils
 
-  deploy:
-    needs: build
+  publish-docs:
+    needs: build-docs
 
     permissions:
       pages: write
       id-token: write
-
 
     environment:
       name: github-pages
