--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "setuptools-git-versioning>=2.0,<3"]
+requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -22,8 +22,7 @@ classifiers = [
 [project.urls]
 Documentation = "https://jason-mckinney.github.io/fputils/"
 
-[tool.setuptools-git-versioning]
-enabled = true
+[tool.setuptools_scm]
 
 [tool.setuptools.packages.find]
 where = ["src"]
