--- a/.github/workflows/pytest-coverage.yml
+++ b/.github/workflows/pytest-coverage.yml
@@ -28,3 +28,6 @@ jobs:
 
       - name: Ruff check formatting
         run: ruff format --check
+
+      - name: Mypy check type hints
+        run: mypy .
