--- a/.github/workflows/pytest-coverage.yml
+++ b/.github/workflows/pytest-coverage.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov ruff
+          pip install pytest pytest-cov ruff mypy
 
       - name: Run pytest with coverage
         run: pytest --cov=src/fputils --cov-branch --cov-report=term-missing --cov-fail-under=80
